user interests index page

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -17,7 +17,7 @@
         <ul id="dropdown1" class="dropdown-content">
           <li><%= link_to "My Profile", user_path(current_user.id) %></li>
           <li><%= link_to "My Job Applications", applications_path %></li>
-          <li><%= link_to "My Companies", companies_path %></li>
+          <li><%= link_to "My Company Interests", user_interests_path %></li>
         </ul>
         <!-- Dropdown Trigger -->
         <li><a class="dropdown-button" data-activates="dropdown1">My Account<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
