--- a/app/views/user_interests/edit.html.erb
+++ b/app/views/user_interests/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing User Interest</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @user_interest %> |
-<%= link_to 'Back', user_interests_path %>
+<%= render :partial => "partials/display_form" %>
