--- a/app/views/user_interests/new.html.erb
+++ b/app/views/user_interests/new.html.erb
@@ -1,5 +1,1 @@
-<h1>New User Interest</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', user_interests_path %>
+<%= render :partial => "partials/display_form" %>
