--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,5 +1,1 @@
-<h1>New Company</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', companies_path %>
+<%= render :partial => "partials/display_form" %>
