--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,15 @@
 <script>
-getProfileData();
+  getProfileData();
 </script>
 
 <%= simple_form_for @user, html: { class: 'form-horizontal' } do |f| %>
   <fieldset>
     <legend> <%= controller.action_name.capitalize %> Account </legend>
     <div class="input-field col s6">
-      <%= f.input :first_name, :input_html => { method: :put, id: "firstName" } %>
+      <%= f.input :first_name, :input_html => { method: :put, id: "firstName", class: "active" } %>
     </div>
     <div class="input-field col s6">
-      <%= f.input :last_name, :input_html =>  { method: :put, id: "lastName" } %>
+      <%= f.input :last_name, :input_html =>  { method: :put, id: "lastName", class: "active" } %>
     </div>
     <div class="input-field col s6">
       <%= f.input :username, :input_html =>  { method: :put, id: "username" } %>
