user interest pages done

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="input-field col s12">
-      <%= company_form.input :description, input_html: {class: "materialize-textarea"} %>
+      <%= company_form.input :description %>
     </div>
 
     <div class="input-field col s12">
