job listing form front end done

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,4 +31,7 @@ div#companySearchBox {
   border: 1px solid #123456;
   display: none; }
 
+.margin-top-15 {
+  margin-top: 15px; }
+
 /*# sourceMappingURL=style.css.map */
