--- a/app/views/job_listings/edit.html.erb
+++ b/app/views/job_listings/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing Job Listing</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @job_listing %> |
-<%= link_to 'Back', job_listings_path %>
+<%= render :partial => "partials/display_form" %>
