--- a/app/views/job_listings/new.html.erb
+++ b/app/views/job_listings/new.html.erb
@@ -1,5 +1,1 @@
-<h1>New Job Listing</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', job_listings_path %>
+<%= render :partial => "partials/display_form" %>
