file uploader stuff

--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Resume:</strong>
-  <%= @application.resume %>
+  <%= link_to "Download Resume", @application.document_url %>
 </p>
 
 <p>
