--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -26,8 +26,8 @@
                 <td><%= link_to application.job_listing.url, "http://#{application.job_listing.url}" %></a></td>
                 <td><%= application.job_listing.description %></td>
                 <td><%= application.status %></td>
-                <td><a class="btn-floating btn-small waves-effect waves-light cyan lighten-3" href="job_listing/<%= application.job_listing_id %>/show"><i class="mdi-action-visibility"></i></a></td>
-                <td><a class="btn-floating btn-small waves-effect waves-light cyan lighten-3" href="job_listing/<%= application.job_listing_id %>/edit"><i class="mdi-image-edit"></i></a></td>
+                <td><a class="btn-floating btn-small waves-effect waves-light cyan lighten-3" href="applications/<%= application.id %>"><i class="mdi-action-visibility"></i></a></td>
+                <td><a class="btn-floating btn-small waves-effect waves-light cyan lighten-3" href="job_listings/<%= application.job_listing_id %>/edit"><i class="mdi-image-edit"></i></a></td>
               </tr>
             <% end %>
           </tbody>
