changed about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -7,8 +7,8 @@
         </h2>
         <p>
             Ever wish you could keep track of all your job applications and interested companies all in one easy to access app? JobHacks is the solution for you!
-            <br>
-            Simply sign in with your LinkedIn account, search for companies, and start saving your job applications/interests today!
+            <br><br>
+            Simply register with your LinkedIn account, search for companies, and start saving your job applications/interests today!
         </p>
     </div>
   </div>
