--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,9 @@
     <div class="container">
       <div class="row">
         <div class="col s12 center">
+          <footer class="page-footer">
           <%= render 'partials/footer' %>
+          </footer>
         </div>
       </div> 
     </div>
