--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,6 +6,12 @@
             About JobHacks
         </h2>
         <p>
+            <hr class="fancy">
+            <br>
+            JobHacks: A MHacks 6 project by Ally Sorge and Maggie Yu.
+            <br>
+            &nbsp;&copy September 2015
+
             Ever wish you could keep track of all your job applications and interested companies all in one easy to access app? JobHacks is the solution for you!
             <br><br>
             Simply register with your LinkedIn account, search for companies, and start saving your job applications/interests today!
