--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -5,15 +5,16 @@
     <ul class="right">
       
         <div id="login">
-          <ul class="left">
-          Welcome, <%= current_user.proper_name %>!
-          </ul>
           <% if logged_in? %>
-            <!-- only display the user's proper name if it exists in the system -->
-            <li><%= link_to 'Log out', logout_path %></li>
+            <ul class="left">
+            Welcome, <%= current_user.proper_name %>!
+            </ul>
+            <li><%= link_to 'About', about_path %></li>
             <li><a class="dropdown-button" data-activates="dropdown1">My Account<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+            <li><%= link_to 'Log out', logout_path %></li>
           <% else %>
             <ul class = "left">Welcome, Guest!</ul>
+            <li><%= link_to 'About', about_path %></li>
             <li><%= link_to 'Log in', login_path %></li>
             <li><%= link_to "Sign up", signup_path %></li>
           <% end %>
