added linkedin button

--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col s12 center">
 		<%= image_tag 'jobhacks2.png', class: "center" %> 
-<!-- 		<p>
-			Log in with your LinkedIn account below to start simplifying your job search now!
-			<br>
-			<script type="in/Login"></script>
-		</p> -->
+		<p class="introduction">
+			Log in with your LinkedIn account below or <%= link_to "sign up here", signup_path %> to start simplifying your job search process now!
+			<br><br>
+			<%= image_tag 'linkedin-button.png', class: "center" %>
+		</p>
 	</div>
 </div>
