fixed about page

--- a/app/views/home/_user_home.html.erb
+++ b/app/views/home/_user_home.html.erb
@@ -11,7 +11,7 @@
 				<br>
 				<br>
 			<% end %>
-			<%= link_to "most recent resume", "www.linkedin.com" %>
+			<%= link_to "Most Recent Resume", "www.linkedin.com" %>
 			<br>
 			<br>
 			<script>populateDashboard();</script>
