--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,20 +1,21 @@
 <div class="container">
   <div class="row">
     <div class="col s12 center">
-        <br>
         <h2>
             About JobHacks
         </h2>
         <p>
             <hr class="fancy">
             <br>
-            JobHacks: A MHacks 6 project by Ally Sorge and Maggie Yu.
-            <br>
-            &nbsp;&copy September 2015
-
-            Ever wish you could keep track of all your job applications and interested companies all in one easy to access app? JobHacks is the solution for you!
+            JobHacks is a MHacks 6 project by Ally Sorge and Maggie Yu.
             <br><br>
+    
+            Ever wish you could keep track of all your job applications and interested companies all in one easy to access app? JobHacks is the solution for you!
+            <br>
             Simply register with your LinkedIn account, search for companies, and start saving your job applications/interests today!
+            
+            <br><br>
+            &nbsp;&copy September 2015
         </p>
     </div>
   </div>
