--- a/app/views/home/_user_home.html.erb
+++ b/app/views/home/_user_home.html.erb
@@ -2,18 +2,38 @@
   <div class="row">
     <div class="col s12 center">
     	<%= image_tag 'jobhacks2.png', class: "center" %> 
-		<div class = "col center z-depth-3" id="dashboard">
-			<b> <%= current_user.proper_name %> <br> <%= current_user.username %> </b>
-			<br>
-			<br>
+		<div class = "col center z-depth-3 margin-top-15" id="dashboard">
+			<div class="margin-top-15">
+				<b>Hey, <%= current_user.proper_name %>!</b>
+			</div>
 			<% unless current_user.title.blank? %>
-				<%= current_user.title %>
-				<br>
+				<div class="small-text">
+					<%= current_user.title %>
+				</div>
 				<br>
 			<% end %>
-			<%= link_to "Most Recent Resume", "www.linkedin.com" %>
-			<br>
-			<br>
+			<p>
+				<div class='waves-effect waves-light btn cyan lighten-3 small grey-text text-darken-3 button'>
+					<%= link_to "My Account", user_path(current_user.id) %>
+				</div>
+				<br><br>
+				<div class='waves-effect waves-light btn cyan lighten-3 small grey-text text-darken-3 button'>
+					<%= link_to "My Job Applications", applications_path %>
+				</div>
+				<br><br>
+				<div class='waves-effect waves-light btn cyan lighten-3 small grey-text text-darken-3 button'>
+					<%= link_to "My Company Interests", user_interests_path %>
+				</div>
+				<br><br>
+
+				<span id="dashboard-button"></span>
+
+				<% unless current_user.applications.blank? %>
+					<div class='waves-effect waves-light btn cyan lighten-3 small grey-text text-darken-3 button'>
+						<%= link_to "Most Recent Resume", current_user.applications.last.resume_url %>
+					</div>
+				<% end %>
+			</p>
 			<script>populateDashboard();</script>
 		</div>
 	</div>
