--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,14 +1,6 @@
-<div class="container">
-  <div class="row">
-    <div class="col s12 center">
-    	<br>
-		<h2>
-			Welcome to JobHacks. 
-			<br>
-			Hire meow!
-		</h2>
-		<p>
-			Twins Alex and Mark are continuing their entrepreneurial ways by starting up the A & M Bread Express Company, an online bakery that delivers fresh baked goods just like their mom used to (and still does) make. We offer the most delicious baked goods in the world. Shop now!
-		</p>
-	</div>
-</div>
+<% if !logged_in? %>
+	<!-- General home page for guests -->
+	<%= render :partial => 'general_home' %>
+<% elsif logged_in? %>
+	<%= render :partial => 'user_home' %>
+<% end %>
