--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,41 +1,39 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<%= simple_form_for @user, html: { class: 'form-horizontal' } do |f| %>
+  <fieldset>
+    <legend> <%= controller.action_name.capitalize %> Account </legend>
+    <div class="input-field col s6">
+      <%= f.input :first_name %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :username %><br>
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="input-field col s6">
+      <%= f.input :last_name %>
+    </div>
+    <div class="input-field col s6">
+      <%= f.input :username %>
+    </div>
+    <div class="input-field col s6">
+      <%= f.input :email %>
+    </div>
+    <div class="input-field col s6">
+      <%= f.input :password %>
+    </div>
+    <div class="input-field col s6">
+      <%= f.input :password_confirmation %>
+    </div>
+    <div class="input-field col s6">
+      <%= f.input :title %>
+    </div>
+    <div class="input-field col s6">
+      <%= f.input :phone %>
+    </div>
+  
+    <!-- buttons -->
+    <div class="form-actions row">
+      <div class="col s12 center">
+        <br>
+        <%= link_to f.submit nil, class: 'btn purple lighten-3' %>
+        <br><br>
+        <div class="button"><%= link_to 'Cancel', users_path, :class => 'btn purple lighten-3' %></div>
+      </div>
+    </div>
+  </fieldset>
 <% end %>
