--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -3,9 +3,7 @@
     <div class="col s12 center">
     	<br>
 		<h2>
-			Welcome To JobHacks. 
-			<br>
-			Hire Meow!
+			Welcome to JobHacks!
 		</h2>
 		<p>
 			Log in with your LinkedIn account below or <%= link_to "sign up here", signup_path %> to start simplifying your job search now!
