--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,6 +1,6 @@
 <!-- navigation bar for the home page -->
-<nav class="purple lighten-4">
-  <div class="nav-wrapper purple lighten-4">
+<nav class="cyan lighten-4">
+  <div class="nav-wrapper cyan lighten-4">
     <%# link_to image_tag("breadexpress_title.png"), home_path, :class => "brand-logo left" %> 
     <ul class="right">
       <!-- link to home -->
