--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,9 +30,9 @@
     <div class="form-actions row">
       <div class="col s12 center">
         <br>
-        <%= link_to f.submit nil, class: 'btn purple lighten-3' %>
+        <%= link_to f.submit nil, class: 'btn cyan lighten-3' %>
         <br><br>
-        <div class="button"><%= link_to 'Cancel', users_path, :class => 'btn purple lighten-3' %></div>
+        <div class="button"><%= link_to 'Cancel', users_path, :class => 'btn cyan lighten-3' %></div>
       </div>
     </div>
   </fieldset>
