--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,134 @@
  *= require_tree .
  *= require_self
  */
+
+/*old styles*/
+
+/*link styles*/
+#login a:hover {
+	text-decoration: underline;
+}
+
+.col a:hover {
+	text-decoration: underline;
+}
+/*end link styles*/
+
+h1, h2, h3, h4, h5, h6 {
+	color: #00838f;
+}
+
+.button a {
+	color: white;
+}
+
+.button a:hover {
+	text-decoration: none;
+}
+
+#login {
+	margin-left: 13px;
+}
+
+.content {
+  margin: 15px;
+}
+
+/* Flash messages and errors */
+#flash_notice, #flash_error {
+  padding: 5px 8px;
+  margin: 10px 0;
+}
+
+#flash_notice {
+  background-color: #f3e5f5;
+  border: solid 1px #8c24cc;
+}
+
+#flash_error {
+  background-color: #f3e5f5;
+  border: solid 1px #8c24cc;
+}
+
+.fieldWithErrors {
+  display: inline;
+}
+
+#errorExplanation {
+  width: 400px;
+  border: 2px solid #CF0000;
+  padding: 0px;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+#errorExplanation h2 {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  margin: 0;
+  background-color: #c00;
+  color: #fff;
+}
+
+#errorExplanation p {
+  color: #333;
+  margin-bottom: 0;
+  padding: 8px;
+}
+
+#errorExplanation ul {
+  margin: 2px 24px;
+}
+
+#errorExplanation ul li {
+  font-size: 12px;
+  list-style: disc;
+}  
+
+/* changing the dropdown menu text to black */
+.dropdown-content li > a, .dropdown-content li > span {
+	color: black !important;
+}
+
+nav ul a {
+	color: black !important;
+}
+
+.brand-logo {
+	margin-top: 9px;
+}
+
+hr.fancy{
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc);
+  background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc);
+  background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc);
+  background-image:      -o-linear-gradient(left, #ccc, #333, #ccc);
+}
+
+hr.fancy2 {
+  padding: 0;
+  border: none;
+  border-top: medium double #333;
+  color: #333;
+  text-align: center;
+}
+
+hr.fancy2:after {
+  content: "§";
+  display: inline-block;
+  position: relative;
+  top: -0.7em;
+  font-size: 1.5em;
+  padding: 0 0.25em;
+  background: white;
+}
+
+.rounded-corners {
+  border-radius: 50px;
+}
