--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -9,3 +9,25 @@ html {
 		color: #0093a9;
 	}
 }
+
+h1, h2, h3, h4, h5, h6 {
+	color: #00838f;
+}
+
+.button {
+	a {
+		color: white;
+	}
+}
+
+#login {
+	margin-left: 13px;
+}
+
+.content {
+  margin: 15px;
+}
+
+.rounded-corners {
+  border-radius: 50px;
+}
