--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,7 +20,7 @@
       <%= f.input :password_confirmation %>
     </div>
     <div class="input-field col s6">
-      <%= f.input :title %>
+      <%= f.input :title, label: "Your current job title" %>
     </div>
     <div class="input-field col s6">
       <%= f.input :phone %>
@@ -30,9 +30,9 @@
     <div class="form-actions row">
       <div class="col s12 center">
         <br>
-        <%= link_to f.submit nil, class: 'btn cyan lighten-3' %>
+        <%= link_to f.submit "Create my account now!", class: 'btn cyan lighten-3' %>
         <br><br>
-        <div class="button"><%= link_to 'Cancel', users_path, :class => 'btn cyan lighten-3' %></div>
+        <div class="button"><%= link_to 'Cancel', home_path, :class => 'btn cyan lighten-3' %></div>
       </div>
     </div>
   </fieldset>
