--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,6 +30,7 @@
     <div class="form-actions row">
       <div class="col s12 center">
         <br>
+        <%= f.button :submit, "Create my account now!", class: "btn cyan lighten-3" %>
         <%= link_to f.submit "Create my account now!", class: 'btn cyan lighten-3' %>
         <br><br>
         <div class="button"><%= link_to 'Cancel', home_path, :class => 'btn cyan lighten-3' %></div>
