--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,12 +39,12 @@
 }
 
 #flash_notice {
-  background-color: #f3e5f5;
+  background-color: #E5F4F6;
   border: solid 1px #8c24cc;
 }
 
 #flash_error {
-  background-color: #f3e5f5;
+  background-color: #E5F4F6;
   border: solid 1px #8c24cc;
 }
 
