--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col s12 center">
-		<%= inline_svg("jobhacks.svg") %>
-		</h2>
+		<%= image_tag 'jobhacks2.png', class: "center" %> 
 		<p>
 			Log in with your LinkedIn account below or <%= link_to "sign up here", signup_path %> to start simplifying your job search now!
 		</p>
