--- a/app/views/home/_user_home.html.erb
+++ b/app/views/home/_user_home.html.erb
@@ -1,12 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col s12 center">
-    	<br>
+    	<%= image_tag 'jobhacks2.png', class: "center" %> 
 		<h2>
-			Hello, <%= current_user.proper_name %>. 
-			<br>
-			Your JobHacks account:
+			Welcome, <%= current_user.proper_name %>!
 		</h2>
+
+		<br>
+		
+		<h4>
+			Your JobHacks account:
+		</h4>
 		<p>
 			Dashboard stuff here.
 		</p>
