--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,7 +1,7 @@
 <!-- navigation bar for the home page -->
 <nav class="cyan lighten-4">
   <div class="nav-wrapper cyan lighten-4">
-    <% link_to image_tag("jobhacks2.svg"), home_path, :class => "brand-logo left" %> 
+    <%= link_to image_tag("jobhacks.png"), home_path, :class => "brand-logo left logo" %> 
     <ul class="right">
       <!-- link to home -->
       <li><%= link_to "Home", home_path %></li>
