--- a/app/views/home/_user_home.html.erb
+++ b/app/views/home/_user_home.html.erb
@@ -3,7 +3,7 @@
     <div class="col s12 center">
     	<%= image_tag 'jobhacks2.png', class: "center" %> 
 		<h2>
-			Welcome, <%= current_user.proper_name %>!
+			Hello, <%= current_user.proper_name %>!
 		</h2>
 
 		<br>
