--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -34,8 +34,8 @@
   <br>
   <% if logged_in? %>
     <!-- only display the user's proper name if it exists in the system -->
-    Welcome, <%= current_user.proper_name %>!
+    Welcome, <%= current_user.proper_name %>! | <%= link_to 'Log out', logout_path %>
   <% else %>
-    Welcome, Guest!
+    Welcome, Guest! | <%= link_to 'Log in', login_path %> | <%= link_to "Sign up", signup_path %>
   <% end %>
 </div>
