--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,7 +20,7 @@
       <%= f.input :password_confirmation %>
     </div>
     <div class="input-field col s6">
-      <%= f.input :title, label: "Your current job title" %>
+      <%= f.input :title, label: "Current job title" %>
     </div>
     <div class="input-field col s6">
       <%= f.input :phone %>
@@ -30,7 +30,7 @@
     <div class="form-actions row">
       <div class="col s12 center">
         <br>
-        <%= f.button :submit, "Create my account now!", class: "btn cyan lighten-3" %>
+        <%= f.button :submit, "Submit", class: "btn cyan lighten-3" %>
         <br><br>
         <div class="button"><%= link_to 'Cancel', home_path, :class => 'btn cyan lighten-3' %></div>
       </div>
