--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,11 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <div class="col s12 center">
+      <%= render partial: "user_details" %>
+      <br>
 
-<p>
-  <strong>First name:</strong>
-  <%= @user.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @user.last_name %>
-</p>
-
-<p>
-  <strong>Username:</strong>
-  <%= @user.username %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @user.title %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @user.phone %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+      <!-- Button for editing user account -->
+      <div class="button"><%= link_to 'Update Profile', edit_user_path(@user), :class => 'btn waves-effect waves-light cyan lighten-3' %></div>
+  </div>
+  </div>
+</div>
