--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,5 +1,12 @@
 html {
 	body {
-		color: #555;
+		h2#titlez {
+			position: fixed;
+			width: 50%;
+			height: 50%;
+			left: 25%;
+			background-image: url("jobhacks.svg");
+			background-size: 100%;
+		}
 	}
 }
