--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -6,5 +6,6 @@
 		<p>
 			Log in with your LinkedIn account below or <%= link_to "sign up here", signup_path %> to start simplifying your job search now!
 		</p>
+		<a class="waves-effect waves-light btn cyan lighten-3" id="linkedinButton">Link Me In Yo</a>
 	</div>
 </div>
