--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,8 @@
     <%= csrf_meta_tags %>
 
     <script type="text/javascript" src="//platform.linkedin.com/in.js">
-      api_key:   [API_KEY]
-      onLoad:    [ONLOAD]
-      authorize: [AUTHORIZE]
-      lang:      [LANG_LOCALE]
+      api_key:   77kvcfbd5dgetc
+      lang:      en_US
     </script>
 
   </head>
