--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -3,7 +3,7 @@
     <div class="col s12 center">
 		<%= image_tag 'jobhacks2.png', class: "center" %> 
 		<p>
-			Log in with your LinkedIn account below or <%= link_to "sign up here", signup_path %> to start simplifying your job search now!
+			Log in with your LinkedIn account below or <script type="in/Login"></script> to start simplifying your job search now!
 		</p>
 		<a class="waves-effect waves-light btn cyan lighten-3" id="linkedinButton">Link Me In Yo</a>
 	</div>
