--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
+    <script type="text/javascript" src="//platform.linkedin.com/in.js">
+      api_key:   77kvcfbd5dgetc
+      authorize: true
+      lang:      en_US
+      onLoad: 	logInSuccess
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -9,10 +16,6 @@
   	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
 
-    <script type="text/javascript" src="//platform.linkedin.com/in.js">
-      api_key:   77kvcfbd5dgetc
-      lang:      en_US
-    </script>
 
   </head>
 
