Adding linked in log out ability

--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -6,5 +6,6 @@
 			Log in with your LinkedIn account below or <script type="in/Login"></script> to start simplifying your job search now!
 		</p>
 		<a class="waves-effect waves-light btn cyan lighten-3" id="linkedinButton">Link Me In Yo</a>
+		<a class="waves-effect waves-light btn cyan lighten-3" id="linkedinLogOut">log out</a>
 	</div>
 </div>
