--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,7 @@
+<script>
+getProfileData();
+</script>
+
 <%= simple_form_for @user, html: { class: 'form-horizontal' } do |f| %>
   <fieldset>
     <legend> <%= controller.action_name.capitalize %> Account </legend>
