--- a/app/views/job_listings/index.html.erb
+++ b/app/views/job_listings/index.html.erb
@@ -1,6 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Job Listings</h1>
+<div class = "container">
+  <div class = "row">
+    <div class = "col s12 center">
+      <script type="text/javascript">
+      <!--
+      indeed_jobroll_title = 'internship jobs';
+      indeed_jobroll_background_color = "#FFFFFF";
+      indeed_jobroll_width = "150px";
+      indeed_jobroll_text_font = "10px Arial, Helvetica, Sans serif";
+      indeed_jobroll_link_color = "#000000";
+      indeed_jobroll_border = "1px solid #000000";
+      //-->
+      </script>
+      <script type="text/javascript" src="http://www.indeed.com/jobroll?q=internship&l=&limit=10">
+      </script>
+      <noscript><a href="http://www.indeed.com/">Jobs</a> by Indeed</noscript>
+      <script type="text/javascript" src="http://gdc.indeed.com/ads/apiresults.js"></script>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 <table>
   <thead>
