--- a/app/views/job_listings/index.html.erb
+++ b/app/views/job_listings/index.html.erb
@@ -13,10 +13,10 @@
       indeed_jobroll_border = "1px solid #000000";
       //-->
       </script>
-      <script type="text/javascript" src="http://www.indeed.com/jobroll?q=internship&l=&limit=10">
+      <script type="text/javascript" src="https://www.indeed.com/jobroll?q=internship&l=&limit=10">
       </script>
       <noscript><a href="http://www.indeed.com/">Jobs</a> by Indeed</noscript>
-      <script type="text/javascript" src="http://gdc.indeed.com/ads/apiresults.js"></script>
+      <script type="text/javascript" src="https://gdc.indeed.com/ads/apiresults.js"></script>
     </div>
   </div>
 </div>
