--- a/app/views/job_listings/index.html.erb
+++ b/app/views/job_listings/index.html.erb
@@ -1,25 +1,10 @@
-<head>
 
-
-  <script type="text/javascript">
-      var indeed_client = new Indeed("3193862925521655");
-      indeed_client.search({
-        q: 'javascript',
-        l: 'austin',
-        userip: '1.2.3.4',
-        useragent: 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_2)',
-      }, function(search_response){
-          console.log(search_response);
-      });
-  </script>
-</head>
 
 <p id="notice"><%= notice %></p>
 
 <div class = "container">
   <div class = "row">
     <div class = "col s12 center">
-    <noscript><a href="http://www.indeed.com/">Jobs</a> by Indeed</noscript>
       <script type="text/javascript">
       <!--
       indeed_jobroll_title = 'internship jobs';
@@ -30,9 +15,9 @@
       indeed_jobroll_border = "1px solid #000000";
       //-->
       </script>
-
-      
-      <script type="text/javascript" src="https://gdc.indeed.com/ads/apiresults.js"></script>
+      <script type="text/javascript" src="http://www.indeed.com/jobroll?q=internship&l=&limit=10">
+      </script>
+      <noscript><a href="http://www.indeed.com/">Jobs</a> by Indeed</noscript>
     </div>
   </div>
 </div>
