--- a/app/views/job_listings/index.html.erb
+++ b/app/views/job_listings/index.html.erb
@@ -15,7 +15,7 @@
       indeed_jobroll_border = "1px solid #000000";
       //-->
       </script>
-      <script type="text/javascript" src="indeed.com/jobroll?q=internship&l=&limit=10">
+      <script type="text/javascript" src="//indeed.com/jobroll?q=internship&l=&limit=10">
       </script>
       <noscript><a href="http://www.indeed.com/">Jobs</a> by Indeed</noscript>
     </div>
