added linked in company search

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -21,3 +21,12 @@ a.logo img {
   width: 48%; }
 
 /*# sourceMappingURL=style.css.map */
+
+div#companySearchBox {
+	position:absolute;
+	width: 20%;
+	height: 10%;
+	top: 15%;
+	left: 40%;
+	border: 1px solid #123456;
+}
