--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,33 +1,44 @@
-<p id="notice"><%= notice %></p>
+<div class = "container">
+  <div class = "row">
+    <div class = "col s12 center">
+      <input type = "text" id = "companySearchBox">
+      </input>
+      <a class="waves-effect waves-light btn cyan lighten-3" id="companySearchButton">Search for Company</a>
+      <br>
+      <br>
+      <p id="notice"><%= notice %></p>
 
-<h1>Listing Companies</h1>
+    <h1>Listing Companies</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Url</th>
-      <th>Description</th>
-      <th>Location</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Url</th>
+          <th>Description</th>
+          <th>Location</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @companies.each do |company| %>
-      <tr>
-        <td><%= company.name %></td>
-        <td><%= company.url %></td>
-        <td><%= company.description %></td>
-        <td><%= company.location %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @companies.each do |company| %>
+          <tr>
+            <td><%= company.name %></td>
+            <td><%= company.url %></td>
+            <td><%= company.description %></td>
+            <td><%= company.location %></td>
+            <td><%= link_to 'Show', company %></td>
+            <td><%= link_to 'Edit', edit_company_path(company) %></td>
+            <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
+    <br>
 
-<%= link_to 'New Company', new_company_path %>
+    <%= link_to 'New Company', new_company_path %>
+    </div>
+  </div>
+</div>
