--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <script type="text/javascript" src="//platform.linkedin.com/in.js">
+    api_key:   77kvcfbd5dgetc
+    authorize: true
+</script>
 
 
 
