--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col s12 center">
 		<%= image_tag 'jobhacks2.png', class: "center" %> 
-		<p>
-			Log in with your LinkedIn account below or <script type="in/Login"></script> to start simplifying your job search now!
-		</p>
-		<a class="waves-effect waves-light btn cyan lighten-3" id="linkedinButton">Link Me In Yo</a>
-		<a class="waves-effect waves-light btn cyan lighten-3" id="linkedinLogOut">log out</a>
+<!-- 		<p>
+			Log in with your LinkedIn account below to start simplifying your job search now!
+			<br>
+			<script type="in/Login"></script>
+		</p> -->
 	</div>
 </div>
