--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -3,7 +3,8 @@
 
 <div id="footer">
 	<%= link_to 'Home', home_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
-	<%= link_to 'About JobHacks', about_path %>
+	<%= link_to 'About JobHacks', about_path %>&nbsp;&nbsp;::&nbsp;&nbsp;
+	<a href="#" id="linkedinLogOut">LinkedIn Log Out</a>
 	<br /><br />
 	<div id="copy">
 		JobHacks: A MHacks 6 project by Ally Sorge and Maggie Yu.
