--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,7 +15,7 @@
       <%= f.input :username, :input_html =>  { method: :put, id: "username" } %>
     </div>
     <div class="input-field col s6">
-      <%= f.input :email, :input_html =>  { method: :put, id: "email" } %>
+      <%= f.input :email, :input_html =>  { method: :put, id: "emailAddress" } %>
     </div>
     <div class="input-field col s6">
       <%= f.input :password %>
