--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -36,13 +36,27 @@ a.logo {
 	}
 }
 
-div#companySearchBox {
-	position:absolute;
-	width: 20%;
-	height: 10%;
-	top: 15%;
-	left: 40%;
-	border: 1px solid #123456;
-	display: none;
+
+nav {
+	ul {
+		li a{
+			display: inline-block;
+			list-style: none;
+		}
+	}
 }
 
+footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+}
+
+div#dashboard {
+	position: absolute;
+	width: 70%;
+	height: 45%;
+	border: 1px dotted cyan;
+	color: #666;
+	font-size: 2em;
+}
