--- a/app/views/home/_user_home.html.erb
+++ b/app/views/home/_user_home.html.erb
@@ -1,16 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col s12 center">
+    <script>populateDashboard();</script>
     	<%= image_tag 'jobhacks2.png', class: "center" %> 
-		<h4>
-			Hello, <%= current_user.proper_name %>!
-		</h4>
-		<br>
-		<h6>
-			Your JobHacks account:
-		</h6>
-		<p>
-			Dashboard stuff here.
-		</p>
+		<div class = "col s6 center z-depth-3" id="dashboard">
+			<b> <%= current_user.proper_name %> || <%= current_user.user_name %> </b>
+			<br>
+			<i><%= current_user.title %></i>
+			<br>
+			<a class="waves-effect waves-light btn cyan lighten-3">Open LinkedIn Profile</a>
+		</div>
+
 	</div>
 </div>
