--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <script type="text/javascript" src="//platform.linkedin.com/in.js">
     api_key:   77kvcfbd5dgetc
     authorize: true
+    scope: r_basicprofile r_emailaddress
   </script>
 
 
